Ajout de l'export dxf pour les mep

--- a/STLAutomationTopSolid/App.config
+++ b/STLAutomationTopSolid/App.config
@@ -8,7 +8,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-    <appSettings>
-      <add key="Chemin" value ="D:\Programmes\Utilitaires\PrusaSlicer\PrusaSlicer\prusa-slicer.exe"/>
-    </appSettings>
+  <appSettings>
+    <add key="Chemin" value ="C:\Program Files\Prusa3D\PrusaSlicer\prusa-slicer.exe"/>
+    <add key="LightBurnExePath" value ="D:\Programmes\Utilitaires\LightBurn\SendUDP.exe"/>
+  </appSettings>
 </configuration>
